# fwd-model-tools

./: .gitignore  .pre-commit-config.yaml  08-convergence-vs-glass.ipynb  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  WIP.md  codex_tmp.py  note.md  plan.md  pyproject.toml
.github/workflows/: formatting.yml  tests.yml
EXAMPLES/: # PRIVATE TODOs.md  AGENTS.md  PK.ipynb  distributed.py  kernels.py  plotting_3d_on_2d.ipynb  plotting_api_showcase.ipynb  utils.py
docs/: rewrite_design.md
notebooks/: 01-Basics.ipynb  01-Basics.ipynb.REMOVED.git-id  01-NBody.ipynb  01-NBody.ipynb.REMOVED.git-id  01-Running-LPT-Simulation.ipynb  01-Running-LPT-Simulation.ipynb.REMOVED.git-id  01-basics.ipynb  01-basics.ipynb.REMOVED.git-id  01-gradient-analysis.ipynb  01-lpt-basics.ipynb  02-Gradient-Comparison.ipynb  02-Gradient-Comparison.ipynb.REMOVED.git-id  02-LPT-Simulation.ipynb  02-LPT-Simulation.ipynb.REMOVED.git-id  02-distributed-full-field-inference.ipynb  02-lpt-lightcone.ipynb  02-nbody-example.ipynb  03-PM-Simulation.ipynb  03-PM-Simulation.ipynb.REMOVED.git-id  03-Painting-Interpolation-Test.ipynb  03-Painting-Interpolation-Test.ipynb.REMOVED.git-id  03-full-field-sampling-vs-2PCF.ipynb  03-lensing-example.ipynb  03-lensing-model.ipynb.REMOVED.git-id  03-nbody-simulation.ipynb  03-nbody-simulation.py  04-Distributed-PM.ipynb  04-Distributed-PM.ipynb.REMOVED.git-id  04-PM-Interpolation.ipynb  04-PM-Interpolation.ipynb.REMOVED.git-id  04-lensing-born-example.ipynb  04-lensing-example.ipynb  05-PM-Interpolation.ipynb  05-PM-Interpolation.ipynb.REMOVED.git-id  06-Advanced-PM.ipynb  06-Advanced-PM.ipynb.REMOVED.git-id  07-Lensing.ipynb  07-Lensing.ipynb.REMOVED.git-id  08-External-Catalog.ipynb  08-External-Catalog.ipynb.REMOVED.git-id  (+14 more)
notebooks/stebne/: 01-gradient-analysis.ipynb  02-distributed-full-field-inference.ipynb  03-full-field-sampling-vs-2PCF.ipynb  04-powerspec-validation.ipynb  run_lensing_inference_workflow.py
scripts/: generate_pm_densities.py  plot_results.py  run_distributed_full_field_inference.py  run_full_field_vs_powerspec.py  run_lensing_model.py  run_simple_sampling.py
simulations/: analyze_samples.ipynb  extract_script.bash  generate_samples.bash  infer_script.bash  raytrace_script.bash  raytrace_script.sh  simulation_grid.bash  simulation_grid.sh  simulation_script.bash
simulations/runners/: born_rt_script.bash  dorian_rt_script.bash  extract_script.bash  generate_samples.bash  infer_script.bash  raytrace_script.bash  simulation_grid.bash  simulation_script.bash
src/fwd_model_tools/: __init__.py  catalog.py  config.py  distributed.py  field.py  fields.py  initial.py  kappa.py  lensing.py  lensing_model.py  normal.py  parameters.py  plotting.py  pm.py  powerspec_model.py  sampling.py  units.py  utils.py
src/fwd_model_tools/_src/: _checks.py  _painting.py  core.py
src/fwd_model_tools/_src/base/: __init__.py  _checks.py  _core.py  _enums.py  _tri_map.py  _warn.py
src/fwd_model_tools/_src/fields/: __init__.py  _painting.py  _plotting.py
src/fwd_model_tools/_src/lensing/: __init__.py  _born.py  _normalize_nz.py
src/fwd_model_tools/_src/power/: __init__.py  _compute.py
src/fwd_model_tools/fields/: __init__.py  density.py  lensing_maps.py  lightcone.py  lightcone.py.REMOVED.git-id  painting.py  particles.py  units.py
src/fwd_model_tools/infer/: __init__.py  analyze.py  batched_sampling.py  dist.py  posterior.py  sample_converter.py
src/fwd_model_tools/io/: __init__.py  catalog.py  cosmogrid.py  extract.py  gowerstreet.py  persistency.py
src/fwd_model_tools/lensing/: born.py  raytrace.py
src/fwd_model_tools/pm/: __init__.py  _resolve_geometry.py  correction.py  integrate.py  interp.py  interp.py.REMOVED.git-id  lpt.py  nbody.py  ode.py  solvers.py
src/fwd_model_tools/pm/legacy/: __init__.py  diffrax_integrate.py  diffrax_solver.py  ode.py
src/fwd_model_tools/power/: __init__.py  compute.py  power_spec.py  theory.py
src/fwd_model_tools/probabilistic_models/: __init__.py  config.py  forward_model.py  full_field_model.py  power_spec_model.py  sample_converter.py
src/fwd_model_tools/sampling/: __init__.py  analyze.py  batched_sampling.py  catalog_io.py  dist.py  persistency.py  plot.py  posterior.py
src/fwd_model_tools/scripts/: __init__.py  ffi_infer.py  ffi_samples.py  ffi_simulate.py
src/fwd_model_tools/solvers/: __init__.py  integrate.py  ode.py  reversible_efficient_fastpm.py  semi_implicit_euler.py
src/jax_fli/: __init__.py  initial.py  utils.py
src/jax_fli/_src/: __init__.py
src/jax_fli/_src/base/: _core.py  _enums.py  _tri_map.py  _warn.py
src/jax_fli/_src/fields/: _painting.py  _plotting.py
src/jax_fli/_src/lensing/: __init__.py  _born.py  _metadata.py
src/jax_fli/_src/power/: _compute.py
src/jax_fli/fields/: density.py  lightcone.py  lightcone.py.REMOVED.git-id
src/jax_fli/infer/: __init__.py  analyze.py  batched_sampling.py  dist.py  posterior.py  sample_converter.py
src/jax_fli/io/: catalog.py  cosmogrid.py  extract.py  gowerstreet.py  persistency.py
src/jax_fli/io/data/: nz_stage3_1.txt.REMOVED.git-id  nz_stage3_2.txt.REMOVED.git-id  nz_stage3_3.txt.REMOVED.git-id  nz_stage3_4.txt.REMOVED.git-id
src/jax_fli/lensing/: __init__.py  born.py  raytrace.py
src/jax_fli/pm/: __init__.py  _resolve_geometry.py  correction.py  integrate.py  interp.py  lpt.py  nbody.py  solvers.py
src/jax_fli/pm/legacy/: __init__.py  diffrax_integrate.py  diffrax_solver.py  ode.py
src/jax_fli/power/: theory.py
src/jax_fli/probabilistic_models/: __init__.py  config.py  forward_model.py  full_field_model.py
src/jax_fli/scripts/: __init__.py  _common.py  fli_born_rt.py  fli_dorian_rt.py  fli_extract.py  fli_grid.py  fli_infer.py  fli_raytrace.py  fli_samples.py  fli_simulate.py  fli_simulate.py.REMOVED.git-id
tests/: conftest.py  requirements.txt  test_against_fpm.py  test_batched_sampling.py  test_catalog.py  test_equal_vol_shells.py  test_extract.py  test_ffi_simulate.py  test_fli_simulate.py  test_plot_axes.py  test_pm_geometry.py  test_power.py  test_sampling.py
