[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-fli"
version = "0.1.0"
description = "Forward-modeling and sampling on top of JAXPM + JAX-Decomp"
authors = [
    { name = "Wassim Kabalan", email = "wassim@apc.in2p3.fr" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["jax", "cosmology", "nbody", "sampling", "mcmc", "bayesian-inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "jax>=0.6.0",
    "equinox",
    "jaxtyping",
    "jaxpm@git+https://github.com/DifferentiableUniverseInitiative/JaxPM.git@ALL-MODIF",
    "jax_cosmo@git+https://github.com/ASKabalan/jax_cosmo@ALL-MODIF",
    "healpy",
    "jax-healpy@git+https://github.com/CMBSciPol/jax-healpy.git@maintaint-shapes-batching",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
catalog = [
    "datasets>=2.0",
    "huggingface_hub>=0.20",
    "h5py",
]
sampling = [
    "blackjax",
    "numpyro",
    "orbax-checkpoint",
]
plot = [
    "matplotlib>=3.0",
    "ipython",
    "ipykernel",
    "ipywidgets",
    "getdist",
    "arviz",
    "tabulate",
]
legacy = ["diffrax"]
raytrace = ["dorian-raytrace@git+https://github.com/ASKabalan/Dorian.git@main"]

all = ["jax_fli[catalog, sampling, legacy, raytrace, plot]"]

[project.urls]
Homepage = "https://github.com/DifferentiableUniverseInitiative/jax-fli"
Documentation = "https://jax-fli.readthedocs.io"
Repository = "https://github.com/DifferentiableUniverseInitiative/jax-fli"
Issues = "https://github.com/DifferentiableUniverseInitiative/jax-fli/issues"


[tool.setuptools]
script-files = ["bin/fli-simulate", "bin/fli-samples", "bin/fli-infer"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jax_fli.io" = ["data/*.txt"]

[tool.ruff]
line-length = 120
fix = true
include = ["*.py", "*.ipynb"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "T10", # flake8-debugger
    "I",   # isort
    #"T20", # flake8-print
]

ignore = [
    "E501",  # line too long
    "E402",  # module level import not at top of file
    "E731",  # do not assign a lambda expression, use a def
    "F722", # syntax error in type annotation
    "UP007"
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", ".git"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
reportGeneralTypeIssues = false
reportMissingImports = false
reportUndefinedVariable = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jax_fli --cov-report=term-missing"
